<resources>
    <string name="app_name">大美e家</string>
    <string name="news">资讯</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="not_mobile_format">手机号码格式不正确</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="about_us">关于我们</string>
    <string name="password_inconformity">两次密码输入不一致</string>
    <string name="my_integral">我的积分</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_activity">我的活动</string>
    <string name="my_order">我的订单</string>
    <string name="edit">编辑</string>
    <string name="done">完成</string>
    <string name="add">添加</string>
    <string name="obtain_code">获取验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="code_error">验证码不正确</string>
    <string name="input_password_count">请输入6-18位密码</string>
    <string name="login_tips">您尚未登录，是否要先登录？</string>
    <string name="logout_tips">确认要退出?</string>
    <string name="no_bound_card">您还没绑定银行卡，是否先绑定银行卡？</string>
    <string name="sure">确定</string>
    <string name="input_name">请输入姓名</string>
    <string name="apply_project">请选择报名项目</string>
    <string name="submit">提交</string>
    <string name="input_title">请输入标题</string>
    <string name="match_ranking">请选择比赛名次</string>
    <string name="impower_failed">授权失败</string>
    <string name="impower_succeed">授权成功</string>
    <string name="impower_cancel">授权取消</string>
    <string name="private_letter">私信</string>
    <string name="message_center">消息中心</string>
    <string name="announcement_message">公告信息</string>


    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="app_tip">提示</string>

    <string name="app_ok">确定</string>
    <string name="input_keyword">请输入关键字</string>

    <string name="qin">亲，说点什么吧...</string>
    <string name="delete_succeed">删除成功</string>
    <string name="please_choose_date">请选择日期</string>
    <string name="cannot_contact">暂时无法联系</string>
    <string name="order_details">订单详情</string>
    <string name="reserve_info">预订信息</string>
    <string name="input_recharge_money">请输入充值金额</string>
    <string name="choose_recharge_money">请选择充值金额</string>
    <string name="new_friends">新的朋友</string>
    <string name="address_book_friends">通讯录好友</string>
    <string name="interested_people">可能感兴趣的人</string>
    <string name="input_kaihu">请输入开户名</string>
    <string name="input_brank_num">请输入银行卡号</string>
    <string name="change_phone_code">验证码以短息方式发送至您的手机，请在60s内输入验证码！</string>
    <string name="leave">留言</string>
    <string name="leave_content">请输入留言内容</string>
    <string name="personal_data">个人资料</string>
    <string name="ablum">相册</string>
    <string name="no_location">不显示位置</string>
    <string name="developing">开发中</string>
    <string name="tem_new_text">帮助白领在办公室缓解“腰酸背痛？</string>
    <string name="chinese_medicine">中医</string>
    <string name="chinese_medicine_physiotherapy">中医理疗</string>
    <string name="mine">我的</string>
    <string name="time">2018-10-1 12:33:55</string>
    <string name="input_consume_code">请输入消费验证码</string>
    <string name="price">￥%1$s</string>
    <string name="full_available">满%1$s可用</string>
    <string name="comment_num">%1$s条评论</string>
    <string name="share">分享</string>
    <string name="comment">评论</string>
    <string name="comm_num">评论%1$s</string>
    <string name="zan_succeed">点赞成功</string>
    <string name="attention">关注</string>
    <string name="attentioned">已关注</string>
    <string name="input_comment">请输入评论内容</string>
    <string name="collect">收藏</string>
    <string name="collected">已收藏</string>
    <string name="reviews_num">%1$s条评论</string>
    <string name="send_message">发消息</string>
    <string name="is_follow">确定要关注？</string>
    <string name="is_no_follow">确定要取消关注？</string>
    <string name="search_friends">搜索好友</string>
    <string name="search_merchant">搜索商家</string>
    <string name="is_add_friend">确定要添加其为好友?</string>
    <string name="all">全部</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_receiving">待收货</string>
    <string name="no_consumption">未消费</string>
    <string name="doned">已完成</string>
    <string name="order_no">订单号：%1$s</string>
    <string name="have_sales">已销售%1$s</string>
    <string name="total_price">总价：</string>
    <string name="total_price_sub"><![CDATA[总价 :<font color="#F5484A">￥%s</font>]]></string>
    <string name="cancel_order">取消订单</string>
    <string name="go_consumption">去消费</string>
    <string name="consumption">消费</string>
    <string name="contact_merchant">联系商家</string>
    <string name="service_item">服务项目：%1$s</string>
    <string name="reserve_time">预定时间：%1$s</string>
    <string name="people_num">人数：%1$s</string>
    <string name="refund_ok">退款完成</string>
    <string name="refund">申请退款</string>
    <string name="refund_apply">退款中</string>
    <string name="order_cancel">订单已取消</string>
    <string name="go_pay">去付款</string>
    <string name="yuan">%1$s元</string>
    <string name="yuan_sub">元</string>
    <string name="jian">件</string>
    <string name="balance">余额：%1$s</string>
    <string name="inventory">库存：%1$s</string>
    <string name="inventory_sub">库存</string>
    <string name="help">帮助</string>
    <string name="news_details">资讯详情</string>
    <string name="balance_insufficient">余额不足</string>
    <string name="delete_order">删除订单</string>
    <string name="evaluate">评价</string>
    <string name="order_affirm_cancel">确认要取消订单？</string>
    <string name="order_affirm_refund">确认要发起申请退款？</string>
    <string name="order_affirm_del">确认要删除订单？</string>
    <string name="order_affirm_consumption">确认要消费？</string>
    <string name="distance">%1$skm\u3000%2$s</string>
    <string name="pay_zhifubao">支付宝支付</string>
    <string name="pay_weixin">微信支付</string>
    <string name="pay_balance">余额支付</string>
    <string name="qr_code">扫码</string>
    <string name="open_camera_error">打开相机出错</string>
    <string name="contact_user">联系用户</string>
    <string name="deal_close">交易关闭</string>
    <string name="reject_refund">拒绝退款</string>
    <string name="reject">拒绝</string>
    <string name="reject_refund_">确认拒绝退款?</string>
    <string name="agree_refund">同意退款</string>
    <string name="agree_refund_">确认同意退款?</string>
    <string name="auditing">审核中</string>
    <string name="audited">已审核</string>
    <string name="input_project_name">请输入项目名称</string>
    <string name="input_price">请输入价格</string>
    <string name="goods_num">共%1$s件商品</string>
    <string name="add_category">添加分类</string>
    <string name="compile_category">编辑分类</string>
    <string name="input_category_name">请输入分类名称</string>
    <string name="choose_category">选择分类</string>
    <string name="del_product">确定要删除该产品？</string>
    <string name="out_product">确定要下架该产品？</string>
    <string name="pay_failure">支付失败</string>
    <string name="pay_succeed">支付成功</string>
    <string name="s_regain">s后重新获取</string>
    <string name="goods_sell">添加销售商品</string>
    <string name="goods_sell_sub">商品销售</string>
    <string name="merchant_data">商家资料</string>
    <string name="chu_ku">出库</string>
    <string name="ru_ku">入库</string>
    <string name="merchant">商家</string>
    <string name="mall">商城</string>
    <string name="dynamic">动态</string>
    <string name="nearby">附近</string>
    <string name="merbership_card_num">会员卡号</string>
    <string name="my_membership_card">我的会员卡</string>
    <string name="chu_ku_list">出库列表</string>
    <string name="ru_ku_list">入库列表</string>
    <string name="sell_list">销售列表</string>
    <string name="total_cash"><![CDATA[总计 :<font color="#F5484A">￥%s</font>]]></string>
    <string name="comments"><![CDATA[商品评价(<font color="#F5484A">%s</font>)]]></string>
    <string name="pay_num">已有%1$s人购买</string>
    <string name="sale_price">市场价：￥%1$s</string>
    <string name="graphic_details">图文详情</string>
    <string name="shop">购物车</string>
    <string name="my_item_order">我的项目订单</string>
    <string name="my_goods_order">我的订单</string>
    <string name="goods_price_num">￥1221\nx1</string>
    <string name="goods_price_and_num">￥%1$s\u3000x%2$s</string>
    <string name="my_coupon">我的优惠卷</string>
    <string name="confirm_order">确认订单</string>
    <string name="is_default">默认</string>
    <string name="set_default">设为默认</string>
    <string name="input_reception_name">请输入收货人姓名</string>
    <string name="input_details_address">请输入详细地址</string>
    <string name="choose_address">请选择收货地址</string>
    <string name="year_month">%1$s-%2$s</string>
    <string name="period_validity">有效期：%1$s至%2$s</string>
    <string name="barcode">编号：%1$s</string>
    <string name="goodsname">商品名称：%1$s</string>
    <string name="number">数量：%1$s</string>
    <string name="province">广东</string>
    <string name="city">广州</string>
    <string name="county">天河</string>
    <string name="compile_address">编辑地址</string>
    <string name="choose_area">请选择项所在区域</string>
    <string name="delete_this_address">确定要删除该地址？</string>
    <string name="search_goods">搜索商品</string>
    <string name="search_news">搜索资讯</string>
    <string name="input_serial_number">请输入编号或扫描获取</string>
    <string name="input_number">请输入数量</string>
    <string name="input_unit">请输入单位</string>
    <string name="choose_merchant">请选择商家</string>
    <string name="pattern_payment">支付方式</string>
    <string name="understock">库存不足</string>
    <string name="just_now">刚刚</string>
    <string name="minutes_ago">分钟前</string>
    <string name="hours_ago">小时前</string>
    <string name="yesterday">昨天</string>
    <string name="day_before_yesterday">前天</string>
    <string name="days_ago">天前</string>
    <string name="format_all_time">yyyy-MM-dd HH:mm:ss</string>
    <string name="format_time_no_second">yyyy-MM-dd HH:mm</string>
    <string name="format_time_year_month_day">yyyy-MM-dd</string>
    <string name="input_user_number">请输入会员编号或扫描获取</string>
    <string name="goods">商品</string>
    <string name="serve">服务</string>
    <string name="goods_number">共计%1$s件商品</string>
    <string name="price_sub">单价：￥%1$s</string>
    <string name="no_merchant_list_data">无法获取商家列表...</string>
    <string name="input_goods_number_or_scan">请输入编号或扫描获取</string>
    <string name="input_unit_price">请输入单价(元)</string>
    <string name="submit_order">提交订单</string>
    <string name="contact_seller">联系卖家</string>
    <string name="confirm_receipt">确认收货</string>
    <string name="bask_in_a_single_comment">晒单评价</string>
    <string name="order">订单</string>
    <string name="courier_no">物流单号：%1$s</string>
    <string name="order_time">下单时间：%1$s</string>
    <string name="page_pdf">%1$s / %2$s</string>
    <!--已支付 = 待发货-->
    <string name="payed">待发货</string>
    <string name="complete_transaction">交易完成</string>
    <string name="my_team">我的团队</string>
    <string name="my_dynamic">我的动态</string>
    <string name="health_report">健康报告</string>
    <string name="mine_money">%1$s\n\n余额</string>
    <string name="mine_voucher">%1$s\n\n优惠券</string>
    <string name="mine_goods_favour">%1$s\n\n商品关注</string>
    <string name="mine_post_favour">%1$s\n\n资讯收藏</string>
    <string name="mine_posts_favour">%1$s\n\n我的动态</string>
    <string name="mine_friend">%1$s\n\n我的好友</string>
    <string name="choose_bank_card">请选择银行卡</string>
    <string name="no_cancel">只有当天添加的商品才能取消</string>
    <string name="pay_type">请选择支付方式</string>
    <string name="unused">未使用</string>
    <string name="have_been_used">已使用</string>
    <string name="have_expired">已过期</string>
    <string name="register_protocol">注册协议</string>
    <string name="agree_protocol"><![CDATA[点击注册即表示同意 <font color="#ff2456">《%s》</font>]]></string>
    <string name="not_using_coupons">没有使用优惠券</string>
    <string name="no_coupon">暂无优惠券可用</string>
    <string name="help_info">帮助信息</string>

</resources>
