<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_mine" />

        <TextView
            style="@style/line_H10dp_on" />

        <LinearLayout
            style="@style/h_match_parent"
            android:paddingBottom="@dimen/d_5dp"
            android:paddingTop="@dimen/d_5dp">

            <TextView
                android:id="@+id/m07"
                style="@style/text_weight"
                android:drawablePadding="@dimen/d_3dp"
                android:drawableTop="@mipmap/m19"
                android:gravity="center_horizontal"
                android:text="@string/chu_ku"
                android:textColor="@color/color333" />

            <TextView
                android:id="@+id/m08"
                style="@style/text_weight"
                android:drawablePadding="@dimen/d_3dp"
                android:drawableTop="@mipmap/m15"
                android:gravity="center_horizontal"
                android:text="@string/ru_ku"
                android:textColor="@color/color333" />

            <TextView
                android:id="@+id/m09"
                style="@style/text_weight"
                android:drawablePadding="@dimen/d_3dp"
                android:drawableTop="@mipmap/m12"
                android:gravity="center_horizontal"
                android:text="@string/goods_sell_sub"
                android:textColor="@color/color333" />

            <TextView
                android:id="@+id/m010"
                style="@style/text_weight"
                android:drawablePadding="@dimen/d_3dp"
                android:drawableTop="@mipmap/m14"
                android:gravity="center_horizontal"
                android:text="@string/evaluate"
                android:textColor="@color/color333" />

        </LinearLayout>

        <TextView
            style="@style/line_H10dp_on" />

        <LinearLayout
            style="@style/h_match_parent"
            android:layout_marginBottom="@dimen/d_10dp"
            android:paddingBottom="@dimen/d_5dp"
            android:paddingTop="@dimen/d_5dp">

            <TextView
                android:id="@+id/m17"
                style="@style/text_weight"
                android:drawablePadding="@dimen/d_3dp"
                android:drawableTop="@mipmap/m13"
                android:gravity="center_horizontal"
                android:text="@string/ablum"
                android:textColor="@color/color333" />

            <TextView
                android:id="@+id/m18"
                style="@style/text_weight"
                android:drawablePadding="@dimen/d_3dp"
                android:drawableTop="@mipmap/m18"
                android:gravity="center_horizontal"
                android:text="@string/help"
                android:textColor="@color/color333" />

            <TextView
                android:id="@+id/m19"
                style="@style/text_weight"
                android:drawablePadding="@dimen/d_3dp"
                android:drawableTop="@mipmap/m20"
                android:gravity="center_horizontal"
                android:text="@string/inventory_sub"
                android:textColor="@color/color333" />

            <TextView
                android:id="@+id/m20"
                style="@style/text_weight"
                android:drawablePadding="@dimen/d_3dp"
                android:drawableTop="@mipmap/m10"
                android:gravity="center_horizontal"
                android:visibility="visible"
                android:text="@string/set"
                android:textColor="@color/color333" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
