<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ll_top"
    android:gravity="right">


    <TextView
        android:id="@+id/order_1"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/d_10dp"
        android:background="@drawable/mine_order_w"
        android:gravity="center"
        android:minWidth="@dimen/order_minWidth"
        android:text="@string/cancel_order"
        android:textSize="@dimen/txt_12sp" />

    <TextView
        android:id="@+id/order_2"
        style="@style/text"
        android:layout_margin="@dimen/d_10dp"
        android:background="@drawable/mine_order_w"
        android:gravity="center"
        android:textSize="@dimen/txt_12sp"
        android:minWidth="@dimen/order_minWidth"
        android:text="@string/contact_merchant" />

    <TextView
        android:id="@+id/order_3"
        style="@style/text"
        android:textSize="@dimen/txt_12sp"
        android:layout_margin="@dimen/d_10dp"
        android:background="@drawable/mine_order"
        android:gravity="center"
        android:minWidth="@dimen/order_minWidth"
        android:text="@string/go_consumption"
        android:textColor="@color/white" />


</LinearLayout>
