<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/items_icon_iv"
            android:layout_width="@dimen/d_100dp"
            android:layout_height="@dimen/d_100dp"
            android:layout_marginBottom="@dimen/d_10dp"
            android:layout_marginRight="@dimen/d_20dp"
            android:layout_marginTop="@dimen/d_10dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/default_pic" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/d_10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_tv"
                style="@style/text"
                android:lines="2"
                android:ellipsize="end"
                android:text="@string/tem_new_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/service_item_tv"
                    style="@style/text12colorBlack"
                    android:layout_marginTop="3dp"
                    android:lines="1"
                    android:ellipsize="end"
                    android:text="@string/service_item" />


                <TextView
                    android:id="@+id/reserve_time_tv"
                    style="@style/text12colorBlack"
                    android:layout_marginTop="3dp"
                    android:lines="1"
                    android:ellipsize="end"
                    android:text="@string/reserve_time" />

                <TextView
                    android:id="@+id/num_people_tv"
                    style="@style/text12colorBlack"
                    android:layout_marginTop="@dimen/d_3dp"
                    android:text="@string/people_num" />


            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <TextView style="@style/line_H1dp_CD" />

</LinearLayout>
