<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorF4F4"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pay_no_tv"
                style="@style/text14colorBlack"
                android:text="@string/order_no"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/pay_status_tv"
                style="@style/text14color666"
                android:layout_width="0dp"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/doned"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <TextView style="@style/line_H1dp_CD" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <include
                android:id="@+id/ll_my_order"
                layout="@layout/item_order_commonality" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">


            <TextView
                style="@style/text14colorBlack"
                android:layout_marginLeft="15dp"
                android:text="@string/total_price" />

            <TextView
                android:id="@+id/total_price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:text="@string/price_sub"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />

        </LinearLayout>



        <include layout="@layout/include_item_order_bottom" />

    </LinearLayout>
</LinearLayout>
