<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.login.RegisterActivity">

    <include layout="@layout/include_centertitletoolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/text_match"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_name"
                style="@style/text_match"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/d_50dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/text_lg_v"
                    android:src="@mipmap/icon_account" />


                <EditText
                    android:id="@+id/nick_name_et"
                    style="@style/login_et_bottom"
                    android:layout_marginLeft="@dimen/d_10dp"
                    android:layout_marginRight="@dimen/d_15dp"
                    android:hint="@string/input_name" />

            </LinearLayout>

            <LinearLayout
                style="@style/text_match"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/text_lg_v"
                    android:src="@mipmap/icon_phone" />


                <EditText
                    android:id="@+id/et_mobile"
                    style="@style/login_et_bottom"
                    android:layout_marginLeft="@dimen/d_10dp"
                    android:layout_marginRight="@dimen/d_15dp"
                    android:hint="@string/input_phone_number"
                    android:inputType="phone"
                    android:maxLength="11" />


            </LinearLayout>

            <LinearLayout
                style="@style/text_match"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/text_lg_v"
                    android:src="@mipmap/icon_code" />


                <LinearLayout style="@style/ll_bottom_login">


                    <EditText
                        android:id="@+id/et_code"
                        style="@style/login_et_bottom"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:hint="请输入验证码"
                        android:inputType="number"
                        android:maxLength="6" />

                    <Button
                        android:id="@+id/obtainCode_bt"
                        android:layout_width="93dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/code_shape"
                        android:text="@string/obtain_code"
                        android:textColor="@color/color9292"
                        android:textSize="14sp" />


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                style="@style/text_match"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/text_lg_v"
                    android:src="@mipmap/icon_pwd" />

                <LinearLayout style="@style/ll_bottom_login">


                    <EditText
                        android:id="@+id/et_pwd"
                        style="@style/login_et_bottom"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:hint="@string/input_pwd"
                        android:inputType="textPassword"
                        android:maxLength="18" />

                    <ImageView
                        android:id="@+id/iv_showPwd"
                        style="@style/text_lg_v"
                        android:layout_marginRight="15dp"
                        android:src="@mipmap/pwd_off" />


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                style="@style/text_match"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/text_lg_v"
                    android:src="@mipmap/icon_pwd" />


                <LinearLayout style="@style/ll_bottom_login">


                    <EditText
                        android:id="@+id/pwd_again_et"
                        style="@style/login_et_bottom"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:hint="@string/input_pwd_again"
                        android:inputType="textPassword"
                        android:maxLength="18" />

                    <ImageView
                        style="@style/text_lg_v"
                        android:visibility="gone"
                        android:layout_marginRight="15dp"
                        android:src="@mipmap/pwd_off" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tgid"
                style="@style/text_match"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/text_lg_v"
                    android:src="@mipmap/icon_phone" />


                <EditText
                    android:id="@+id/tgid_et"
                    style="@style/login_et_bottom"
                    android:layout_marginLeft="@dimen/d_10dp"
                    android:layout_marginRight="@dimen/d_15dp"
                    android:hint="请输入推荐者的推广ID或手机号码" />

            </LinearLayout>


            <Button
                android:id="@+id/bt_register"
                style="@style/button_style"
                android:layout_marginTop="50dp"
                android:text="@string/register" />

            <com.xson.common.widget.FormatTextView
                android:id="@+id/agree_protocol_tv"
                style="@style/text12color666"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/d_30dp"
                android:layout_marginLeft="@dimen/d_15dp"
                android:layout_marginTop="@dimen/d_5dp"
                android:visibility="gone"
                app:defaultValue="@string/register_protocol"
                app:formatText="@string/agree_protocol" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
