<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView style="@style/line_H10dp_on" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/subtract_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/d_12dp"
            android:src="@mipmap/num_subtract" />

        <LinearLayout
            android:id="@+id/ll_goods_sell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/ll_bottom">

                <TextView
                    style="@style/mine_text"
                    android:text="商品编号"
                    android:textColor="@color/color666" />


                <EditText
                    android:id="@+id/number_et"
                    style="@style/text"
                    android:background="@null"
                    android:hint="@string/input_goods_number_or_scan"
                    android:gravity="right"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:maxLength="28" />

                <ImageView
                    android:id="@+id/qr_code_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d_5dp"
                    android:layout_marginRight="@dimen/d_10dp"
                    android:src="@mipmap/m_scan_qr_code" />

            </LinearLayout>

            <LinearLayout style="@style/ll_bottom">

                <TextView
                    style="@style/mine_text"
                    android:text="数量"
                    android:textColor="@color/color666" />


                <EditText
                    android:id="@+id/num_et"
                    style="@style/text"
                    android:layout_marginRight="@dimen/d_15dp"
                    android:background="@null"
                    android:hint="@string/input_number"
                    android:gravity="right"
                    android:inputType="number"
                    android:maxLength="10" />

            </LinearLayout>

            <LinearLayout style="@style/ll_bottom">

                <TextView
                    style="@style/mine_text"
                    android:text="单价"
                    android:textColor="@color/color666" />


                <EditText
                    android:id="@+id/price_et"
                    style="@style/text"
                    android:layout_marginRight="@dimen/d_15dp"
                    android:background="@null"
                    android:hint="@string/input_unit_price"
                    android:inputType="numberDecimal"
                    android:gravity="right"
                    android:maxLength="11" />

            </LinearLayout>


            <LinearLayout style="@style/ll_no_border">

                <TextView
                    style="@style/mine_text"
                    android:text="单位"
                    android:textColor="@color/color666" />


                <EditText
                    android:id="@+id/unit_et"
                    style="@style/text"
                    android:layout_marginRight="@dimen/d_15dp"
                    android:background="@null"
                    android:hint="@string/input_unit"
                    android:gravity="right"
                    android:maxLength="10" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
